# potn-api-types

./: .gitignore  LICENSE  package-lock.json  package.json
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/docs/: AuthApi.md  ErrorDetail.md  ErrorModel.md  InstanceBody.md  InstanceResponse.md  InstancesApi.md  ListOutputBody.md  LogoutInputBody.md  LogoutOutputBody.md  PresignOutputBody.md  PutInputBody.md  RefreshInputBody.md  SettingsApi.md  SettingsBody.md  TokenPair.md  User.md  UserApi.md
rust/src/apis/: auth_api.rs  configuration.rs  instances_api.rs  mod.rs  settings_api.rs  user_api.rs
rust/src/models/: error_detail.rs  error_model.rs  instance_body.rs  instance_response.rs  list_output_body.rs  logout_input_body.rs  logout_output_body.rs  mod.rs  presign_output_body.rs  put_input_body.rs  refresh_input_body.rs  settings_body.rs  token_pair.rs  user.rs
typescript/: package.json  tsconfig.json
typescript/src/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
